<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tanka.accessories.todoroom.views.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/change_pp"
        android:orderInCategory="100"
        android:title="@string/change_pp"
        app:showAsAction="never" />

    <item
        android:id="@+id/change_layout"
        android:orderInCategory="100"
        android:title="@string/turn_grid"
        app:showAsAction="never" />

    <item
        android:id="@+id/search_note"
        android:orderInCategory="100"
        android:title="@string/search_note"
        app:showAsAction="always"
        android:iconTint="@color/White"
        android:icon="@android:drawable/ic_menu_search"/>
</menu>
