<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/contentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation_background"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/ten"
        android:background="@android:color/holo_purple"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/textTwentyFour" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/ten"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/textEighteen" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/ten"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/textSixteen" />


    <TextView
        android:id="@+id/tvType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/ten"
        android:text="@string/type"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/textFourteen" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:lottie_fileName="city.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true" />

</LinearLayout>